[workspace]
members = ["bug-test/src-tauri", "tauri-plugin-hello"]
resolver = "2"

[workspace.package]
authors = ["Development Team"]
edition = "2021"
license = "MIT License"
publish = false
rust-version = "1.79"
version = "0.1.0"

[workspace.dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
specta = "2.0.0-rc"
tauri = {version = "2.0.0-beta", features = []}
tauri-build = {version = "2.0.0-beta", features = []}
tauri-plugin = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-specta = {version = "2.0.0-rc", features = [
  "typescript",
  "javascript",
]}
thiserror = "1.0.61"
