[package]
authors = ["You"]
description = ""
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-hello"
name = "tauri-plugin-hello"
rust-version = "1.70"
version = "0.0.0"

[dependencies]

serde = {version = "1", features = ["derive"]}
specta = "2.0.0-rc"
tauri = {version = "2.0.0-beta", features = []}
tauri-specta = {version = "2.0.0-rc", features = [
  "typescript",
  "javascript",
]}
thiserror = "1.0.61"

[build-dependencies]
tauri-plugin = {version = "2.0.0-beta", features = ["build"]}
