[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "bug-test"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri-plugin-shell.workspace = true
tauri.workspace = true
